@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed Fluid dependency on X11 (STR #2261)
 	- Updated the bundled libpng to v1.2.40 (released Sep. 10, 2009)
 	- Fixed Fl_Choice contrast with light-on-dark settings (STR #2219)
 	- Fixed X server "lock", if a modal dialog window is opened
